Add basic PDF generation example
  Other:
  - add missing 'name' tag for input fields
    html form simply does not add field data
    to the post request without it

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,12 +5,15 @@ block content
   script(src='/javascripts/bootstrap.bundle.min.js')
   p Welcome to #{title}
 
-  form
+  form(
+    method="post"
+    )
     .form-group
       label(for="name") Name
       input#name.form-control(
         aria-describedby="nameHelp"
         type="text"
+        name="name"
         )
       small#nameHelp.form-text.text-muted Your name
     .form-group
@@ -18,6 +21,7 @@ block content
       input#surname.form-control(
         aria-describedby="surnameHelp"
         type="text"
+        name="surname"
         )
       small#surnameHelp.form-text.text-muted Your surname
     button.btn.btn-primary(type="submit") Submit
