--- a/views/index.pug
+++ b/views/index.pug
@@ -6,4 +6,10 @@ block content
 
   form(method="post")
     include physical_health
+    include relationships
+    include mental
+    include career
+    include finance
+    include personal_growth
+    include fun
     button.btn.btn-primary(type="submit") Submit
