Add wheel of life and minor changes in template

--- a/views/physical_health.pug
+++ b/views/physical_health.pug
@@ -1,4 +1,21 @@
 .form-group.mb-3.col-sm-10
+       .input-group
+        span#name-sp.input-group-text.col-sm-5 Name
+        input#name.form-control(
+          aria-describedby="name" 
+          type="text"
+          name="name"
+        )
+
+        .input-group
+        span#age-sp.input-group-text.col-sm-5 Age
+        input#age.form-control(
+          aria-describedby="age" 
+          type="text"
+          name="age"
+        )
+
+.form-group.mb-3.col-sm-10
       h3 Health
 
       .input-group
