Open PDF on the new tab and give it a name

--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,10 @@ block content
   h1 Annual snapshot
   script(src='/javascripts/bootstrap.bundle.min.js')
 
-  form(method="post")
+  form(
+    method="post"
+    target="_blank"
+  )
     include physical_health
     include relationships
     include mental
