--- a/views/mental.pug
+++ b/views/mental.pug
@@ -1,12 +1,17 @@
 .form-group.mb-3.col-sm-10
     h3 Mental health
-
+               //- TODO: add required 
       .input-group
-        span#mental-1-sp.input-group-text.col-sm-8 How would you rate this area of your life? Score 1-10
-        input#mental-1.form-control(
-          aria-describedby="mental-1" 
-          type="text"
+        span#mental-0-sp.input-group-text.col-sm-8 How do you feel about your mental health right now?
+        input#mental-0.form-control(
+          aria-describedby="mental-0" 
+          type="number"
+          min="0"
+          max="10"
+          name="mentalRate"
+          placeholder="Score 1 - 10" 
         )
+
         .input-group
         //- rephrase
         span#mental-2-sp.input-group-text.col-sm-8 Is it possible for you to stay calm in stressful situations? (Score 1-10)
