--- a/views/relationships.pug
+++ b/views/relationships.pug
@@ -1,6 +1,18 @@
 .form-group.mb-3.col-sm-10
     h3 Relationships
 
+       //- TODO: add required 
+      .input-group
+        span#relations-0-sp.input-group-text.col-sm-8 How do you feel about your relationships right now?
+        input#relations-0.form-control(
+          aria-describedby="relations-0" 
+          type="number"
+          min="0"
+          max="10"
+          name="relationsRate"
+          placeholder="Score 1 - 10" 
+        )
+
     h4 Romantic 
       .input-group
         span#romantic-1-sp.input-group-text.col-sm-8 How happy you are in the relationship with partner? Score 1-10
