Fix TODO and minor formatting changes

--- a/views/relationships.pug
+++ b/views/relationships.pug
@@ -1,7 +1,6 @@
 .form-group.mb-3.col-sm-10
     h3 Relationships
 
-       //- TODO: add required 
       .input-group
         span#relations-0-sp.input-group-text.col-sm-8 How do you feel about your relationships right now?
         input#relations-0.form-control(
@@ -81,3 +80,6 @@
           placeholder="TODO, Сurrent state of things (how much time spent with friends and how, how much close friends in your life, etc, "
           type="text"
         )
+
+
+        //- add required for all rate this area fields
