Add fitness section to pdf

--- a/views/physical_health.pug
+++ b/views/physical_health.pug
@@ -208,8 +208,8 @@
         )
         select#squats-select.form-select
           option(selected="") Open this select menu
-          option(value="1") Max weight
-          option(value="2") Max amount with body weight
+          option(value="1") kg (1 time to failure)
+          option(value="2") times with body weight 
 
     h6 Cardiovascular 
 
