Add relations section to pdf

--- a/views/relationships.pug
+++ b/views/relationships.pug
@@ -27,6 +27,12 @@
           type="text"
         )
         .input-group
+        span#romantic-4-sp.input-group-text.col-sm-8 How happy you are with quality of couple time? (Score 1-10)
+        input#romantic-4.form-control(
+          aria-describedby="romantic-4" 
+          type="text"
+        )
+        .input-group
         span#romantic-3-sp.input-group-text.col-sm-2 Note
         input#romantic-3.form-control(
           aria-describedby="romantic-3" 
@@ -47,6 +53,12 @@
         span#family-2-sp.input-group-text.col-sm-8 How happy you are with amount of time spent with family? (Score 1-10)
         input#family-2.form-control(
           aria-describedby="family-2" 
+          type="text"
+        )
+        .input-group
+        span#family-4-sp.input-group-text.col-sm-8 How happy you are with quality of time spent with family? (Score 1-10)
+        input#family-4.form-control(
+          aria-describedby="family-4" 
           type="text"
         )
         .input-group
@@ -71,6 +83,12 @@
         span#friends-2-sp.input-group-text.col-sm-8 How happy you are with amount of time spent with friends? (Score 1-10)
         input#friends-2.form-control(
           aria-describedby="friends-2" 
+          type="text"
+        )
+        .input-group
+        span#friends-4-sp.input-group-text.col-sm-8 How happy you are with quality of time spent with friends? (Score 1-10)
+        input#friends-4.form-control(
+          aria-describedby="friends-4" 
           type="text"
         )
         .input-group
