Add business and career block

--- a/views/career.pug
+++ b/views/career.pug
@@ -28,6 +28,13 @@
         )
         .input-group
         //- rephrase
+        span#career-21-sp.input-group-text.col-sm-8 What is your role in the team? 
+        input#career-21.form-control(
+          aria-describedby="career-21" 
+          type="text"
+        )
+        .input-group
+        //- rephrase
         span#career-3-sp.input-group-text.col-sm-8 How happy satisfied you with your job/career? (Score 1-10)
         input#career-3.form-control(
           aria-describedby="career-3" 
