Fun section added to report

--- a/views/fun.pug
+++ b/views/fun.pug
@@ -26,6 +26,13 @@
           aria-describedby="fun-3" 
           type="text"
         )
+        .input-group
+        //- rephrase
+        span#fun-31-sp.input-group-text.col-sm-8 Amusements this year 
+        input#fun-31.form-control(
+          aria-describedby="fun-31" 
+          type="text"
+        )
 
         .input-group
         //- rephrase
@@ -45,6 +52,7 @@
 
         .input-group
         //- rephrase
+        //- TODO: make combobox
         span#fun-6-sp.input-group-text.col-sm-8 Is recreational part of youl life is included in routine? 
         input#fun-6.form-control(
           aria-describedby="fun-6" 
