--- a/views/physical_health.pug
+++ b/views/physical_health.pug
@@ -11,12 +11,13 @@
         span#age-sp.input-group-text.col-sm-5 Age
         input#age.form-control(
           aria-describedby="age" 
-          type="text"
           name="age"
+          type="number"
+          min="0"
+          max="100"
         )
         .input-group
         span#gender-sp.input-group-text.col-sm-5 Gender
-        //- .input-group.form-check.form-check-inline
         input#femaleRadio.form-check-input(
           value="Female" 
           name="genderRadio" 
@@ -24,9 +25,8 @@
         )
         label.form-check-label(for="femaleRadio") Female
         //- TODO: styling, checked default option
-        //- .form-check
         input#maleRadio.form-check-input(
-          value="option2" 
+          value="Male" 
           name="genderRadio" 
           type="radio"
         )
@@ -35,7 +35,6 @@
 .form-group.mb-3.col-sm-10
       h3 Health
 
-             //- TODO: add required 
       .input-group
         span#health-0-sp.input-group-text.col-sm-8 How do you feel about your health right now?
         input#health-0.form-control(
@@ -48,47 +47,66 @@
         )
 
       .input-group
-        span#blood-pressure-sp.input-group-text.col-sm-5 Blood pressure
+        span#blood-pressure-sp.input-group-text.col-sm-5 Blood pressure, mmHg
         input#blood-pressure.form-control(
           aria-describedby="blood-pressure" 
           type="text"
           name="bloodpressure"
+          maxlength=6
         )
         .input-group
-        span#blood-chol-sp.input-group-text.col-sm-5 Blood cholesterol
+        span#blood-chol-sp.input-group-text.col-sm-5 Blood cholesterol, mmol/L
         input#blood-chol.form-control(
           aria-describedby="blood-chol" 
-          type="text"
+          type="number"
+          name="cholesterol"
+          min=0
+          max=50
+          step=0.1
         )
         .input-group
-        span#blood-glucose-sp.input-group-text.col-sm-5 Blood glucose
+        span#blood-glucose-sp.input-group-text.col-sm-5 Blood glucose, mmol/L
         input#blood-glucose.form-control(
           aria-describedby="blood-glucose" 
-          type="text"
+          type="number"
+          name="glucose"
+          min=0
+          max=50
+          step=0.1
         )
         .input-group
         span#body-fat-sp.input-group-text.col-sm-5 Body fat, %
         input#body-fat.form-control(
           aria-describedby="body-fat" 
-          type="text"
+          type="number"
+          name="bodyfat"
+          min=0
+          max=50
+          step=0.1
         )
         select#body-fat-measure.form-select
-          option(selected="") Open this select menu
           option(value="1") Calipper
-          option(value="2") DEXA scan
+          option(selected="" value="2") DEXA scan
           option(value="3") Home weight
           
         .input-group
-        span#vo2max-sp.input-group-text.col-sm-5 VO2max
+        span#vo2max-sp.input-group-text.col-sm-5 VO2max, ml/kg/min
         input#vo2max.form-control(
           aria-describedby="vo2max" 
-          type="text"
+          type="number"
+          name="vo2max"
+          min=0
+          max=100
+          step=0.1
         )
         .input-group
-        span#resting-hr-sp.input-group-text.col-sm-5 Resting HR
+        span#resting-hr-sp.input-group-text.col-sm-5 Resting HR, bpm
         input#resting-hr.form-control(
           aria-describedby="resting-hr" 
-          type="text"
+          type="number"
+          name="restinghr"
+          min=0
+          max=150
         )
 
 .form-group.mb-3.col-sm-10
@@ -98,13 +116,19 @@
         span#height-sp.input-group-text.col-sm-5 Height, cm
         input#height.form-control(
           aria-describedby="height" 
-          type="text"
+          type="number"
+          name="height"
+          min=0
+          max=250
         )
         .input-group
         span#weight-sp.input-group-text.col-sm-5 Weight, kg
         input#weight.form-control(
           aria-describedby="weight" 
-          type="text"
+          type="number"
+          name="weight"
+          min=0
+          max=200
         )
 
 .form-group.mb-3.col-sm-10
@@ -114,58 +138,87 @@
         span#neck-sp.input-group-text.col-sm-5 Neck, cm
         input#neck.form-control(
           aria-describedby="neck" 
-          type="text"
+          type="number"
+          name="neck"
+          min=0
+          max=100
         )
         .input-group
         span#chest-sp.input-group-text.col-sm-5 Chest, cm
         input#chest.form-control(
           aria-describedby="chest" 
-          type="text"
+          type="number"
+          name="chest"
+          min=0
+          max=200
         )
         .input-group
         span#arm-sp.input-group-text.col-sm-5 Arm, cm
         input#arm.form-control(
           aria-describedby="arm" 
-          type="text"
+          type="number"
+          name="arm"
+          min=0
+          max=200
         )
         .input-group
         span#waist-sp.input-group-text.col-sm-5 Waist, cm
         input#waist.form-control(
           aria-describedby="waist" 
-          type="text"
+          type="number"
+          name="waist"
+          min=0
+          max=200
         )
         .input-group
         span#hips-sp.input-group-text.col-sm-5 Hips, cm
         input#hips.form-control(
           aria-describedby="hips" 
-          type="text"
+          type="number"
+          name="hips"
+          min=0
+          max=200
         )
         .input-group
         span#thigh-sp.input-group-text.col-sm-5 Thigh, cm
         input#thigh.form-control(
           aria-describedby="thigh" 
-          type="text"
+          type="number"
+          name="thigh"
+          min=0
+          max=200
         )
         .input-group
         span#calf-sp.input-group-text.col-sm-5 Calf, cm
         input#calf.form-control(
           aria-describedby="calf" 
-          type="text"
+          type="number"
+          name="calf"
+          min=0
+          max=200
         )
 .form-group.mb-3.col-sm-10
     h6 Skin quality
 
        .input-group
-        span#face-skin-sp.input-group-text.col-sm-5 Face skin (Score 1-10)
+        span#face-skin-sp.input-group-text.col-sm-5 Face skin quality
         input#face-skin.form-control(
           aria-describedby="face-skin" 
-          type="text"
+          type="number"
+          name="faceskin"
+          min=0
+          max=10
+          placeholder="Score 1-10"
         )
         .input-group
-        span#body-skin-sp.input-group-text.col-sm-5 Body skin (Score 1-10)
+        span#body-skin-sp.input-group-text.col-sm-5 Body skin quality
         input#body-skin.form-control(
           aria-describedby="body-skin" 
-          type="text"
+          type="number"
+          name="bodyskin"
+          min=0
+          max=10
+          placeholder="Score 1-10"
         )
 .form-group.mb-3.col-sm-10
     h4 Fitness
@@ -187,28 +240,35 @@
         span#pull-up-sp.input-group-text.col-sm-5 Max pull-ups amount
         input#pull-up.form-control(
           aria-describedby="pull-up" 
-          type="text"
+          type="number"
+          min="0"
+          max="100"
+          name="pullup"
         )
         .input-group
         span#push-up-sp.input-group-text.col-sm-5 Max push-ups amount
         input#push-up.form-control(
           aria-describedby="push-up" 
-          type="text"
+          type="number"
+          min="0"
+          max="100"
+          name="pushup"
         )
         select#push-up-form.form-select
-          option(selected="") Open this select menu
-          option(value="1") Knee push-up
+          option(selected="" value="1") Knee push-up
           option(value="2") Regular push-ups
 
         .input-group
         span#squats-sp.input-group-text.col-sm-5 Squats (kg or amount)
         input#squats.form-control(
           aria-describedby="squats" 
-          type="text"
+          type="number"
+          min="0"
+          max="200"
+          name="squats"
         )
         select#squats-select.form-select
-          option(selected="") Open this select menu
-          option(value="1") kg (1 time to failure)
+          option(selected="" value="1") kg (1 time to failure)
           option(value="2") times with body weight 
 
     h6 Cardiovascular 
@@ -216,102 +276,107 @@
        .input-group
         span#cardio-0-sp.input-group-text.col-sm-5 Personal record, mins
         select#cardio-0-select.form-select
-          option(selected="") Open this select menu
-          option(value="1") Run
+          option(selected="" value="1") Run
           option(value="2") Bike
         select#cardio-dist-0-select.form-select
-          option(selected="") Open this select menu
-          option(value="1") 1 km
+          option(selected="" value="1") 1 km
           option(value="2") 5 km
           option(value="3") 10 km
         input#cardio-0.form-control(
           aria-describedby="cardio-0" 
           type="text"
+          name="cardio0"
         )
 
         .input-group
         span#cardio-1-sp.input-group-text.col-sm-5 Personal record, mins
         select#cardio-1-select.form-select
-          option(selected="") Open this select menu
-          option(value="1") Run
+          option(selected="" value="1") Run
           option(value="2") Bike
         select#cardio-dist-1-select.form-select
-          option(selected="") Open this select menu
-          option(value="1") 1 km
+          option(selected="" value="1") 1 km
           option(value="2") 5 km
           option(value="3") 10 km
         input#cardio-1.form-control(
           aria-describedby="cardio-1" 
           type="text"
+          name="cardio1"
         )
 
         .input-group
         span#cardio-2-sp.input-group-text.col-sm-5 Personal record, mins
         select#cardio-2-select.form-select
-          option(selected="") Open this select menu
-          option(value="1") Run
+          option(selected="" value="1") Run
           option(value="2") Bike
         select#cardio-dist-2-select.form-select
-          option(selected="") Open this select menu
-          option(value="1") 1 km
+          option(selected="" value="1") 1 km
           option(value="2") 5 km
           option(value="3") 10 km
         input#cardio-2.form-control(
           aria-describedby="cardio-2" 
           type="text"
+          name="cardio2"
         )
 
 
         .input-group
         span#cardio-3-sp.input-group-text.col-sm-5 Longest distance, km
         select#cardio-3-select.form-select
-          option(selected="") Open this select menu
-          option(value="1") Run
+          option(selected="" value="1") Run
           option(value="2") Bike
         input#cardio-3.form-control(
           aria-describedby="cardio-3" 
-          type="text"
+          type="number"
+          min="0"
+          max="300"
+          name="cardio3"
         )
 
         .input-group
         span#cardio-4-sp.input-group-text.col-sm-5 Longest distance, km
         select#cardio-4-select.form-select
-          option(selected="") Open this select menu
-          option(value="1") Run
+          option(selected="" value="1") Run
           option(value="2") Bike
         input#cardio-4.form-control(
           aria-describedby="cardio-4" 
-          type="text"
+          type="number"
+          min="0"
+          max="300"
+          name="cardio4"
         )
 
 
         .input-group
         span#cardio-5-sp.input-group-text.col-sm-5 Yearly mileage, km
         select#cardio-5-select.form-select
-          option(selected="") Open this select menu
-          option(value="1") Run
+          option(selected="" value="1") Run
           option(value="2") Bike
         input#cardio-5.form-control(
           aria-describedby="cardio-5" 
-          type="text"
+          type="number"
+          min="0"
+          name="cardio5"
         )
 
         .input-group
         span#cardio-6-sp.input-group-text.col-sm-5 Yearly mileage, km
         select#cardio-6-select.form-select
-          option(selected="") Open this select menu
-          option(value="1") Run
+          option(selected="" value="1") Run
           option(value="2") Bike
         input#cardio-6.form-control(
           aria-describedby="cardio-6" 
-          type="text"
+          type="number"
+          min="0"
+          name="cardio6"
         )
 
         .input-group
         span#cardio-7-sp.input-group-text.col-sm-5 Average steps per day (yearly)
         input#cardio-7.form-control(
           aria-describedby="cardio-7" 
-          type="text"
+          type="number"
+          min="0"
+          name="cardio7"
         )
 
     h6 Moblity 
@@ -324,8 +389,9 @@
           min="0"
           max="10"
           name="mobilityRate0"
-          placeholder="Score 1 - 10 (TODO add example tests/exercises" 
-        )
+          placeholder="Score 1 - 10" 
+        ) 
+        //- TODO: add tooltip for each mobility input with excercises/tests to perform to assess mobility
         .input-group
         span#mobility-1-sp.input-group-text.col-sm-8 How do you feel about your mobility in thoracic spine?
         input#mobility-1.form-control(
@@ -334,7 +400,7 @@
           min="0"
           max="10"
           name="mobilityRate1"
-          placeholder="Score 1 - 10 (TODO add example tests/exercises" 
+          placeholder="Score 1 - 10" 
         )
         .input-group
         span#mobility-2-sp.input-group-text.col-sm-8 How do you feel about your mobility in hips?
@@ -344,7 +410,7 @@
           min="0"
           max="10"
           name="mobilityRate2"
-          placeholder="Score 1 - 10 (TODO add example tests/exercises" 
+          placeholder="Score 1 - 10" 
         )
         .input-group
         span#mobility-3-sp.input-group-text.col-sm-8 How do you feel about your mobility in ankles?
@@ -354,7 +420,7 @@
           min="0"
           max="10"
           name="mobilityRate3"
-          placeholder="Score 1 - 10 (TODO add example tests/exercises" 
+          placeholder="Score 1 - 10" 
         )
 
 .form-group.mb-3.col-sm-10
@@ -364,7 +430,10 @@
         span#mood-sp.input-group-text.col-sm-5 Average mood (Score 1-10)
         input#mood.form-control(
           aria-describedby="mood" 
-          type="text"
+          type="number"
+          min="0"
+          max="10"
+          name="mood"
           placeholder="1 - Sad, depressed, down, 10 - happy, high, awesome, great."
         )
 
@@ -372,18 +441,24 @@
     h4 Sleep
 
        .input-group
-        span#sleep-sp.input-group-text.col-sm-5 Average sleep quality (Score 1-10)
+        span#sleep-sp.input-group-text.col-sm-5 Average sleep quality, score
         input#sleep.form-control(
           aria-describedby="sleep" 
-          type="text"
-          placeholder="TODO"
+          type="number"
+          min="0"
+          max="10"
+          name="sleep0"
+          placeholder="1 - short/missing REM/dep sleep phase, interrupted, short in duration, 10 - excellent REM/deep, excelent recovery"
         )
         .input-group
         span#sleep-duration-sp.input-group-text.col-sm-5 Average amount of sleep per night, hours
         input#sleep-duration.form-control(
           aria-describedby="sleep-duration" 
-          type="text"
-          placeholder="TODO"
+          type="number"
+          min="0"
+          max="10"
+          name="sleep1"
+          placeholder="Average sleep duration"
         )
 
 .form-group.mb-3.col-sm-10
@@ -394,7 +469,7 @@
         input#training-volume.form-control(
           aria-describedby="training-volume" 
           type="text"
-          placeholder="TODO"
+          name="training0"
         )
 
        .input-group
@@ -402,40 +477,42 @@
         input#training-volume-1.form-control(
           aria-describedby="training-volume-1" 
           type="text"
-          placeholder="TODO"
+          name="training1"
         )
-        //- rename
         .input-group 
         span#training-type-sp.input-group-text.col-sm-5 Sport disciplines
         input#training-type.form-control(
           aria-describedby="training-type" 
           type="text"
-          placeholder="TODO"
+          name="training2"
+          maxlength=38
+          placeholder="What sports are you into?"
         )
         .input-group 
         span#training-routine-sp.input-group-text.col-sm-5 Training routine
         input#training-routine.form-control(
           aria-describedby="training-routine" 
           type="text"
+          name="training3"
+          maxlength=160
           placeholder="What type of training, how often, when, anything important (or not important)"
         )
         .input-group 
         span#diet-sp.input-group-text.col-sm-5 Percentage of healthy food in weekly meal plan, %
         input#diet.form-control(
           aria-describedby="diet" 
-          type="text"
-          placeholder="TODO"
+          type="number"
+          min=0
+          max=100
+          name="training4"
         )
         .input-group 
         span#routine-sp.input-group-text.col-sm-5 Note
-        input#routine.form-control(
+        textarea#routine.form-control(
           aria-describedby="routine" 
-          type="text"
+          cols="33" 
+          rows="5" 
+          name="healthnote"
+          maxlength=930
           placeholder="Daily routine, average mood, what do you eat, how do you train, supplements, healthy habits, cold/hot exposure, etc"
         )
-
-    
-
-//- TODO add descriptions for 'score' fields, change data type to numbers in input fields, add descriptions
-//- add photos to report? 
-
